# cfp-radar

./: .gitignore  LICENSE  README.md  config.yaml  events.json  index.html  pyproject.toml
.github/workflows/: deploy.yml
data/: events.json
src/: __init__.py  cli.py  config.py  generator.py  notifier.py
src/collector/: __init__.py  agent.py  models.py
src/collector/sources/: __init__.py  confs_tech.py  papercall.py  web_search.py
src/web/: __init__.py
src/web/templates/: index.html
src/web/templates/partials/: event_list.html
tests/: __init__.py  test_collector.py  test_models.py
